# claude-git

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  package.json  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
plugins/git-master/: .git-flow-config.json  .git-flow-schema.json  CHANGELOG.example.md  INSTALLATION-FIX.md  README.md  TROUBLESHOOTING.md  install.js  mcp-server.js  package.json  start-web.bat  start-web.ps1  start-web.sh
plugins/git-master/.claude-plugin/: .mcp.json  plugin.json
plugins/git-master/.github/: PULL_REQUEST_TEMPLATE.md
plugins/git-master/agents/: system.md
plugins/git-master/docs/: GIT_CONVENTIONS.md
plugins/git-master/hooks/: README.md  clean-cache.js  commit-msg.ps1  install-dependencies.js  install-hooks.js  post-git-operation.js  post-git-operation.sh  post-release.ps1  postinstall.js  pre-commit.ps1  pre-git-check.js  pre-git-check.sh  session-start-hook.js  setup.sh  start-background.js  test-hooks.sh
plugins/git-master/lib/: index.ts
plugins/git-master/mcp/: README.md  build.js  package.json  server.js  server.original.js
plugins/git-master/skills/: SKILL.md  aureus-install.js  aureus-install.md
plugins/git-master/tests/: README.md  run-tests.js  test-dependencies.js  test-security.js  test-server.js  (+1 more)
src/: cli.rs  utils.rs
src/commands/: completion.rs  hooks.rs  init.rs  repo.rs  update.rs
src/convention/: mod.rs  version.rs
src/git/: executor.rs  hooks.rs  mod.rs  status.rs
src/storage/: mod.rs
tests/: README.md  vitest.setup.ts
(+37 files in other folders)
