[package]
name = "aureus-vrc"
version = "0.11.3"
edition = "2021"
authors = ["Yanis"]
description = "Aureus VRC - Versioned Release Convention CLI for Git workflow automation"
license = "MIT"
repository = "https://github.com/Pamacea/aureus"
homepage = "https://github.com/Pamacea/aureus"
readme = "README.md"
keywords = ["git", "versioning", "semver", "cli", "conventional-commits"]
categories = ["development-tools", "command-line-utilities"]
include = ["LICENSE", "README.md", "CHANGELOG.md", "src/**/*.rs", "Cargo.toml"]

[[bin]]
name = "aureus-vrc"
path = "src/main.rs"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Git operations
git2 = "0.18"

# Storage & Serialization
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
dirs = "5.0"
once_cell = "1.19"
lazy_static = "1.4"
semver = "1.0"

# Dialog prompts
dialoguer = "0.11"
indicatif = "0.17"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

[dev-dependencies]
tempfile = "3.10"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
